# Repositorio_ProyectoC

./: main.c
simple-c-app/apps/: main
simple-c-app/dev/src/: CMakeLists.txt
